Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-1155

Oops after error on mds_survey tests

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.3.0
    • None
    • None
    • 3
    • 4696

      Lustre: Echo OBD driver; http://www.lustre.org/
      LDISKFS-fs (sda2): warning: maximal mount count reached, running e2fsck is recommended
      LDISKFS-fs (sda2): mounted filesystem with ordered data mode. Opts:
      LustreError: 23618:0:(echo_client.c:786:echo_device_alloc()) Can not find tgt device lustre-MDT0000
      BUG: unable to handle kernel NULL pointer dereference at 0000000000000028
      IP: [<ffffffffa07379d2>] obd_setup+0x222/0x330 [obdclass]
      PGD 5f78e4067 PUD 60da36067 PMD 0
      Oops: 0002 1 SMP
      last sysfs file: /sys/devices/pci0000:00/0000:00:01.0/0000:01:00.0/host0/target0:0:0/0:0:0:0/block/sda/sda2/alignment_offset
      CPU 6
      Modules linked in: obdecho(U) lustre(U) obdfilter(U) ost(U) osd_ldiskfs(U) cmm(U) fsfilt_ldiskfs(U) mdt(U) mdd(U) mds(U) mgs(U) ldiskfs(U) jbd(U) mgc(U) lov(U) osc(U) mdc(U) lmv(U) fid(U) fld(U) lquota(U) ptlrpc(U) obdclass(U) lvfs(U) ksocklnd(U) lnet(U) libcfs(U) nfsd(U) lockd(U) nfs_acl(U) auth_rpcgss(U) exportfs(U) autofs4(U) vmnet(U) ppdev(U) parport_pc(U) parport(U) vmblock(U) vsock(U) vmci(U) vmmon(U) sunrpc(U) cpufreq_ondemand(U) acpi_cpufreq(U) freq_table(U) mperf(U) ipv6(U) dm_mirror(U) dm_region_hash(U) dm_log(U) uinput(U) 8139too(U) 8139cp(U) xhci_hcd(U) sg(U) serio_raw(U) i2c_i801(U) iTCO_wdt(U) iTCO_vendor_support(U) r8169(U) mii(U) snd_hda_codec_hdmi(U) snd_hda_codec_realtek(U) snd_hda_intel(U) snd_hda_codec(U) snd_hwdep(U) snd_seq(U) snd_seq_device(U) snd_pcm(U) snd_timer(U) snd(U) soundcore(U) snd_page_alloc(U) i7core_edac(U) edac_core(U) shpchp(U) ext4(U) mbcache(U) jbd2(U) sr_mod(U) cdrom(U) firewire_ohci(U) firewire_core(U) crc_itu_t(U) sd_mod(U) crc_t10dif(U) ata_piix(U) pata_acpi(U) ata_generic(U) pata_jmicron(U) ahci(U) wmi(U) radeon(U) ttm(U) drm_kms_helper(U) drm(U) hwmon(U) i2c_algo_bit(U) i2c_core(U) dm_mod(U) [last unloaded: microcode]

      Pid: 23618, comm: lctl Not tainted 2.6.32 #3 Gigabyte Technology Co., Ltd. X58A-UD3R/X58A-UD3R
      RIP: 0010:[<ffffffffa07379d2>] [<ffffffffa07379d2>] obd_setup+0x222/0x330 [obdclass]
      RSP: 0018:ffff880601c25b18 EFLAGS: 00010207
      RAX: 0000000000000006 RBX: ffff8806068d0040 RCX: ffff880601c25b68
      RDX: 0000000000000031 RSI: 000000000000006b RDI: ffffffffa078e240
      RBP: ffff880601c25bf8 R08: 0000000000000000 R09: ffff880600702b60
      R10: 0000000000000000 R11: 09f911029d74e35b R12: 0000000000000000
      R13: 0000000000000000 R14: ffff880601c25b88 R15: ffffffffa0d29ba0
      FS: 00007fe23239b700(0000) GS:ffff8800282c0000(0000) knlGS:0000000000000000
      CS: 0010 DS: 0000 ES: 0000 CR0: 0000000080050033
      CR2: 0000000000000028 CR3: 00000005f0fb2000 CR4: 00000000000006e0
      DR0: 0000000000000000 DR1: 0000000000000000 DR2: 0000000000000000
      DR3: 0000000000000000 DR6: 00000000ffff0ff0 DR7: 0000000000000400
      Process lctl (pid: 23618, threadinfo ffff880601c24000, task ffff8805f98d6aa0)
      Stack:
      ffff880601c25b28 ffffffff814f1d9e ffff880601c25b78 ffffffffa0734186
      <0> ffff8806068d00cc ffff880601c23378 000000001000000b 0000000000000000
      <0> 0000000000000000 0000000000000004 ffff880601c25b68 ffff880601c25b68
      Call Trace:
      [<ffffffff814f1d9e>] ? _spin_unlock+0xe/0x10
      [<ffffffffa0734186>] ? class_handle_hash+0xd6/0x290 [obdclass]
      [<ffffffffa0737ce8>] class_setup+0x208/0xa50 [obdclass]
      [<ffffffff814f1d1e>] ? _read_unlock+0xe/0x10
      [<ffffffffa07211dc>] ? class_name2dev+0x7c/0xd0 [obdclass]
      [<ffffffffa073f7cc>] class_process_config+0xd6c/0x1fd0 [obdclass]
      [<ffffffff8115d314>] ? cache_alloc_debugcheck_after+0xf4/0x1c0
      [<ffffffffa05fca23>] ? cfs_alloc+0x63/0x90 [libcfs]
      [<ffffffff8115f71e>] ? __kmalloc+0x13e/0x290
      [<ffffffffa05fca23>] ? cfs_alloc+0x63/0x90 [libcfs]
      [<ffffffffa071c9f6>] class_handle_ioctl+0x2116/0x22f0 [obdclass]
      [<ffffffff8113ac84>] ? handle_mm_fault+0x1e4/0x2b0
      [<ffffffff811872a0>] ? do_filp_open+0x780/0xd90
      [<ffffffffa0706313>] obd_class_ioctl+0x53/0x240 [obdclass]
      [<ffffffff8115ca06>] ? kfree_debugcheck+0x16/0x40
      [<ffffffff81189022>] vfs_ioctl+0x22/0xa0
      [<ffffffff81182d6b>] ? getname+0x3b/0x250
      [<ffffffff811891c4>] do_vfs_ioctl+0x84/0x590
      [<ffffffff81189751>] sys_ioctl+0x81/0xa0
      [<ffffffff8100b0f2>] system_call_fastpath+0x16/0x1b
      Code: 8d bd 50 ff ff ff ff 10 48 8d bd 50 ff ff ff 49 89 c5 e8 62 d5 01 00 49 81 fd 00 f0 ff ff 0f 87 03 01 00 00 4c 89 ab b8 00 00 00 <49> 89 5d 28 e9 61 fe ff ff 8b 83 c0 00 00 00 41 b9 46 02 00 00
      RIP [<ffffffffa07379d2>] obd_setup+0x222/0x330 [obdclass]
      RSP <ffff880601c25b18>
      CR2: 0000000000000028

            di.wang Di Wang (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: